refact: change organization/name.

--- a/report.html
+++ b/report.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<title>Espelho de ponto — pontual</title>
+<title>Espelho de ponto — pingponto</title>
 <link rel="stylesheet" href="styles.css">
 <meta name="theme-color" content="#111111">
 </head>
@@ -23,7 +23,7 @@
 <script src="db.js"></script>
 <script>
 document.addEventListener('DOMContentLoaded', function () {
-window.pontual.mountReport(document);
+window.pingponto.mountReport(document);
 });
 </script>
 </body>
