--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<title>pontual</title>
+<title>pingponto</title>
 <link rel="manifest" href="manifest.webmanifest">
 <link rel="stylesheet" href="styles.css">
 <meta name="theme-color" content="#111111">
 </head>
 <body>
 <main class="container">
-<h1>pontual</h1>
+<h1>pingponto</h1>
 
 
 <section id="loginSection" class="card">
