--- a/report.html
+++ b/report.html
@@ -1,30 +1,120 @@
 <!doctype html>
 <html lang="pt-BR">
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<title>Espelho de ponto — pingponto</title>
-<link rel="stylesheet" href="styles.css">
-<meta name="theme-color" content="#111111">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <title>Espelho de ponto — pingponto</title>
+    <link rel="stylesheet" href="styles.css">
+    <meta name="theme-color" content="#FF92C2">
 </head>
+
 <body>
-<main class="container">
-<h1>Espelho de ponto</h1>
-<div class="row">
-<select id="reportEmp"></select>
-<input id="dateFrom" type="date">
-<input id="dateTo" type="date">
-<button id="btnReport" class="primary">Exibir</button>
-<button id="btnCsv" class="ghost">Exportar CSV</button>
-<a class="ghost" href="index.html">Voltar</a>
-</div>
-<table id="reportTable"></table>
-</main>
-<script src="db.js"></script>
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-window.pingponto.mountReport(document);
-});
-</script>
+    <main class="container">
+        <h1>Espelho de ponto</h1>
+        <div class="row">
+            <select id="reportEmp"></select>
+            <input id="reportMonth" type="month">
+            <button id="btnReport" class="primary">Exibir</button>
+            <button id="btnCsv" class="ghost">Exportar CSV</button>
+            <a class="ghost" href="index.html">Voltar</a>
+        </div>
+        <table id="reportTable"></table>
+    </main>
+
+    <script src="db.js"></script>
+    <script>
+        function startOfDay(ts) { var d = new Date(ts); d.setHours(0, 0, 0, 0); return d.getTime(); }
+        function pad2(n) { return String(n).padStart(2, "0"); }
+        function hhmm(ts) { var d = new Date(ts); return pad2(d.getHours()) + ":" + pad2(d.getMinutes()); }
+        function minutes(ms) { return Math.floor(ms / 60000); }
+        function hhmmFromMinutes(min) { var h = Math.floor(min / 60), m = min % 60; return pad2(h) + ":" + pad2(m); }
+
+        var empSel = document.getElementById("reportEmp");
+        var month = document.getElementById("reportMonth");
+        var tbl = document.getElementById("reportTable");
+        var btn = document.getElementById("btnReport");
+        var csv = document.getElementById("btnCsv");
+
+        window.pingpontoDb.listEmployees().then(function (list) {
+            empSel.innerHTML = list.map(function (e) { return "<option value='" + e.id + "'>" + e.name + "</option>"; }).join("");
+        });
+
+        function monthRange(ym) {
+            if (!ym || !ym.value) return null;
+            var parts = ym.value.split("-");
+            var y = parseInt(parts[0], 10), m = parseInt(parts[1], 10) - 1;
+            var from = new Date(y, m, 1, 0, 0, 0, 0).getTime();
+            var to = new Date(y, m + 1, 0, 23, 59, 59, 999).getTime();
+            return { from: from, to: to };
+        }
+
+        function groupByDay(list) {
+            var map = {};
+            list.forEach(function (p) {
+                var dayKey = startOfDay(p.ts);
+                (map[dayKey] = map[dayKey] || []).push(p.ts);
+            });
+            Object.keys(map).forEach(function (k) { map[k].sort(function (a, b) { return a - b; }); });
+            return map;
+        }
+
+        function computeDay(clicks) {
+            var totalMs = 0;
+            for (var i = 0; i + 1 < clicks.length; i += 2) {
+                totalMs += (clicks[i + 1] - clicks[i]);
+            }
+            var n = clicks.length;
+            var status = "OK";
+            if (n === 0) status = "Sem registros";
+            else if (n > 4) status = "Inconsistente";
+            else if (n % 2 === 1) status = "Irregular";
+            return { totalMin: minutes(totalMs), status: status };
+        }
+
+        function render() {
+            var empId = parseInt(empSel.value, 10);
+            var r = monthRange(month);
+            if (!empId || !r) {
+                tbl.innerHTML = "<tr><td>Selecione um mês e um colaborador</td></tr>";
+                return;
+            }
+            window.pingpontoDb.listPunchesByEmpAndRange(empId, r.from, r.to).then(function (list) {
+                var byDay = groupByDay(list);
+                var dayKeys = Object.keys(byDay).map(function (k) { return parseInt(k, 10); }).sort(function (a, b) { return a - b; });
+
+                var rows = ["<tr><th>Data</th><th>Horários</th><th>Total trabalhado</th><th>Status</th></tr>"];
+                var csvLines = ["data;horarios;total_trabalhado;status"];
+
+                dayKeys.forEach(function (dayKey) {
+                    var clicks = byDay[dayKey];
+                    var d = new Date(dayKey);
+                    var dataStr = d.toLocaleDateString('pt-BR');
+                    var horarios = clicks.map(hhmm).join("  •  ");
+                    var comp = computeDay(clicks);
+                    var totalStr = hhmmFromMinutes(comp.totalMin);
+                    rows.push("<tr><td>" + dataStr + "</td><td>" + horarios + "</td><td>" + totalStr + "</td><td>" + comp.status + "</td></tr>");
+                    csvLines.push([dataStr, horarios, totalStr, comp.status].join(";"));
+                });
+
+                if (dayKeys.length === 0) {
+                    rows = ["<tr><td>Nenhum registro no mês selecionado.</td></tr>"];
+                }
+
+                tbl.innerHTML = rows.join("");
+
+                csv.onclick = function () {
+                    var blob = new Blob([csvLines.join("\n")], { type: "text/csv;charset=utf-8;" });
+                    var url = URL.createObjectURL(blob);
+                    var a = document.createElement("a");
+                    a.href = url; a.download = "relatorio.csv";
+                    a.click(); URL.revokeObjectURL(url);
+                };
+            });
+        }
+
+        btn.onclick = render;
+    </script>
 </body>
+
 </html>
