--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <main class="container">
     <h1>pingponto</h1>
+    <button id="btnInstalar" class="hidden">Instalar aplicativo</button>
 
     <section id="loginSection" class="card">
       <h2>Entrar</h2>
