refact:adicionando gerenciamento de gestores

--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
           </div>
 
           <div class="row">
+            <select id="managerPinSelect"></select>
             <input id="changeManagerPin" placeholder="Novo PIN" type="password" inputmode="numeric" maxlength="6" autocomplete="off">
             <input id="changeManagerPinConfirm" placeholder="Confirmar PIN" type="password" inputmode="numeric" maxlength="6" autocomplete="off">
-            <button id="btnChangeManagerPin" class="ghost">Alterar meu PIN</button>
+            <button id="btnChangeManagerPin" class="ghost">Alterar PIN</button>
           </div>
 
           <table id="managerTable"></table>
